2017-02-22  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# automatically generate README.md from tutorial.md.
	# make examples easier to load (turn off Pkg install for vgg etc, docs take too long)
	## no easy way to do it without effecting source links.

	* TODO8:
	# add some test for deconv vs conv.
	# gpu switching back and forth does not seem to work. do we really need multiple handles for cublas, cudnn? do we need them for libknet8?
	# Latest master failing on nightly; AutoGrad also fails.
	# AutoGrad: run all tests with KnetArrays
	# grad of convert (AutoGrad issue), implemented in karray.jl, need to port.
	# AutoGrad docs convert from comments to docstrings in core.jl and include in Knet manual.
	# AutoGrad: support for keys, values, next for dictionaries.
	# find out why benchmarks are slower on julia5/6: https://github.com/JuliaLang/julia/issues/18135 ?
	# add benchmarks with new dynamic frameworks: Yoav tweet, Volkan email. assigned to Ilker, Enis.
	# docs todo: Julia tutorial. simplify examples. Baris Bozkurt's comments.
	# docs todo: perceptron. kernel perceptron. svm. lenet and vgg in cnn section.
	# charlm: add dropout, add adam, functional lstm interface defining multi-output grad2 function.
	# charlm: try indexing op instead of sparse matmul.
	# charlm: try lstm time concatenation.
	# time doing a single im2col instead of N for conv4
	# replace T<: functions with generated code for each type

	# optimization:
	## make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	## optimize reduction and broadcasting kernels.
	## optimize logp / softmax.
	## optimize conv4 / matmul - arrayfire? cudnn conv instead of matmul? cudnn conv algorithms?
	## try fusion: we can do layers in one kernel call: relu(wx+b).
	## try streams or multiple gpus.

	# mnist2d: implement/test sparse arrays